--- a/index.html
+++ b/index.html
@@ -1,61 +1,85 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>GreenMarket Local</title>
-<style>
-  :root{--accent:#2a8f6f;--muted:#6b7280;--bg:#fbfdfb;--card:#fff;--maxw:1100px;font-family:Inter,Arial,sans-serif}
-  body{margin:0;background:var(--bg);color:#0b2b1f}
-  .container{max-width:var(--maxw);margin:0 auto;padding:18px}
-  header{background:var(--card);border-bottom:1px solid #e8efe9}
-  .top{display:flex;justify-content:space-between;align-items:center;padding:14px 0}
-  .logo{font-weight:800;color:var(--accent)}
-  nav a{margin-left:14px;color:var(--muted);text-decoration:none}
-  .hero{display:flex;gap:28px;align-items:center;padding:40px 0}
-  .hero .left h1{font-size:30px;margin:0 0 8px}
-  .search{display:flex;gap:8px;margin-top:14px}
-  .search input{padding:12px;border-radius:8px;border:1px solid #e6efe9;flex:1}
-  .btn{background:var(--accent);color:#fff;padding:10px 14px;border-radius:8px;border:none;cursor:pointer}
-  .vendors{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:14px;margin-top:22px}
-  .card{background:var(--card);padding:12px;border-radius:10px;box-shadow:0 8px 20px rgba(42,143,111,0.06)}
-  footer{padding:18px;text-align:center;color:var(--muted)}
-  @media(max-width:800px){.hero{flex-direction:column}.vendors{grid-template-columns:1fr}}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Unity Credit Union</title>
+  <style>
+    :root{
+      --accent:#0b5d67; --accent-2:#0f9a8a; --muted:#6b7280; --bg:#f6f9fb;
+      --maxw:1100px; font-family: "Inter", Arial, sans-serif;
+    }
+    *{box-sizing:border-box}
+    body{margin:0;background:var(--bg);color:#052025}
+    header{background:#fff;border-bottom:1px solid #e6eef0}
+    .container{max-width:var(--maxw);margin:0 auto;padding:18px}
+    .topbar{display:flex;align-items:center;justify-content:space-between}
+    .logo{font-weight:700;color:var(--accent)}
+    nav a{margin-left:16px;text-decoration:none;color:var(--muted);font-weight:600}
+    .hero{display:grid;grid-template-columns:1fr 380px;gap:28px;padding:48px;align-items:center}
+    .hero-left h1{font-size:32px;margin:0 0 12px}
+    .hero-left p{color:var(--muted);margin:0 0 18px}
+    .cta-row{display:flex;gap:12px}
+    .btn{background:var(--accent);color:#fff;padding:12px 18px;border-radius:8px;border:none;cursor:pointer;font-weight:700}
+    .btn.secondary{background:#fff;color:var(--accent);border:1px solid #e0eef0}
+    .quick-actions{background:#fff;padding:18px;border-radius:10px;box-shadow:0 8px 24px rgba(11,93,103,0.06)}
+    label{display:block;font-size:13px;color:var(--muted);margin-bottom:6px}
+    input,select{width:100%;padding:10px;border-radius:8px;border:1px solid #e8f1f2}
+    footer{padding:28px;background:#fff;border-top:1px solid #e6eef0;margin-top:38px}
+    @media(max-width:900px){.hero{grid-template-columns:1fr;}.container{padding:12px}}
+  </style>
 </head>
 <body>
-  <header class="container">
-    <div class="top">
-      <div class="logo">GreenMarket</div>
+  <header>
+    <div class="container topbar">
+      <div class="logo">Unity Credit Union</div>
       <nav>
-        <a href="#">Shop</a><a href="#">Vendors</a><a href="#">Events</a><a href="#">Become a Vendor</a>
+        <a href="#">Personal</a><a href="#">Loans</a><a href="#">Rates</a><a href="#">Locations</a>
+        <a href="#" style="margin-left:18px" class="btn">Login</a>
       </nav>
     </div>
   </header>
 
   <main class="container hero">
-    <div class="left">
-      <h1>Find fresh goods from your neighborhood makers</h1>
-      <p style="color:var(--muted)">Discover local farms, artisans, and pickup points near you. Support local, eat fresh.</p>
-      <div class="search">
-        <input placeholder="Search for farmers, crafts, or goods (e.g. sourdough, pottery)" />
-        <button class="btn">Search</button>
+    <div class="hero-left">
+      <h1>Banking that’s rooted in community</h1>
+      <p>Simple checking and savings, competitive loans, and local branches that know your name. Member-first banking with modern tools.</p>
+      <div class="cta-row">
+        <button class="btn">Open an Account</button>
+        <button class="btn secondary">Apply for a Loan</button>
       </div>
 
-      <section class="vendors">
-        <div class="card"><strong>Maple Farm</strong><div style="color:var(--muted)">Organic vegetables • Pickup</div></div>
-        <div class="card"><strong>Luna Pottery</strong><div style="color:var(--muted)">Handmade ceramics • Delivery</div></div>
-        <div class="card"><strong>Sea Salt Co.</strong><div style="color:var(--muted)">Artisanal salts • Gift sets</div></div>
+      <section style="margin-top:22px;background:#fff;padding:18px;border-radius:10px;box-shadow:0 6px 18px rgba(11,93,103,0.04)">
+        <h3 style="margin:0 0 10px">Member quick actions</h3>
+        <div style="display:grid;grid-template-columns:repeat(3,1fr);gap:12px">
+          <div style="padding:10px;border-radius:8px;background:#f7fdfb">Find Branch</div>
+          <div style="padding:10px;border-radius:8px;background:#f7fdfb">Rates</div>
+          <div style="padding:10px;border-radius:8px;background:#f7fdfb">Support</div>
+        </div>
       </section>
     </div>
 
-    <aside style="min-width:300px" class="card">
-      <h4 style="margin:0 0 8px">Local Pickups Near You</h4>
-      <div style="color:var(--muted)">Select a date and reserve a slot for pickup at neighborhood hubs.</div>
-      <div style="margin-top:12px"><button class="btn" onclick="alert('Simulated schedule')">Reserve Slot</button></div>
+    <aside class="quick-actions">
+      <h4 style="margin:0 0 10px">Check rates / Apply now</h4>
+      <label for="product">I want to</label>
+      <select id="product">
+        <option>Open a checking account</option>
+        <option>Apply for a mortgage</option>
+        <option>Apply for an auto loan</option>
+      </select>
+      <div style="margin-top:12px">
+        <label for="zip">ZIP code</label>
+        <input id="zip" placeholder="Enter ZIP" />
+      </div>
+      <div style="margin-top:12px"><button class="btn" onclick="alert('Simulated submit')">Continue</button></div>
     </aside>
   </main>
 
-  <footer>© GreenMarket Local – Support small business • Non-production demo</footer>
+  <footer class="container">
+    <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap">
+      <div>© Unity Credit Union. Member FDIC. Privacy • Security</div>
+      <div style="color:var(--muted)">Contact: 1-800-555-0100 • support@test.local</div>
+    </div>
+  </footer>
 </body>
 </html>
