--- a/unity/index.html
+++ b/unity/index.html
@@ -1,222 +1,120 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Unity Credit Union</title>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-<style>
-  :root{
-    --bg:#f4f7fb; --card:#ffffff; --accent:#0b5370; --accent-2:#0f85a1;
-    --muted:#6b7280; --success:#0b8a4a; --radius:12px; --maxw:1150px;
-  }
-  *{box-sizing:border-box}
-  html,body{height:100%}
-  body{
-    margin:0;font-family:"Inter",system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
-    background:linear-gradient(180deg,#f7fbfc 0%,var(--bg) 60%);color:#0b2630;
-    -webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Unity Credit Union</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f5f7fa;
+      color: #333;
+    }
 
-  /* Header */
-  .site-header{
-    background:linear-gradient(90deg,var(--accent),var(--accent-2));
-    color:#fff;padding:18px 20px;box-shadow:0 6px 24px rgba(11,37,48,0.12);
-  }
-  .wrap{max-width:var(--maxw);margin:0 auto;display:flex;align-items:center;justify-content:space-between;gap:18px}
-  .brand{display:flex;align-items:center;gap:12px}
-  .logo{
-    width:56px;height:56px;border-radius:10px;background:rgba(255,255,255,0.12);
-    display:flex;align-items:center;justify-content:center;font-weight:800;color:#fff;font-size:18px;
-  }
-  .brand h1{margin:0;font-size:18px;letter-spacing:0.2px}
-  .nav {display:flex;gap:14px;align-items:center}
-  .nav a{color:rgba(255,255,255,0.95);text-decoration:none;font-weight:600}
-  .cta-primary{background:#fff;color:var(--accent);padding:8px 14px;border-radius:10px;font-weight:700;text-decoration:none}
+    header {
+      background-color: #003366;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
 
-  /* Main layout */
-  main{max-width:var(--maxw);margin:28px auto;padding:0 18px}
-  .grid{display:grid;grid-template-columns:1fr 380px;gap:20px;align-items:start}
-  @media(max-width:980px){.grid{grid-template-columns:1fr}}
+    nav {
+      background-color: #0055a5;
+      padding: 10px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
 
-  /* Hero card */
-  .hero{
-    background:var(--card);border-radius:var(--radius);padding:28px;box-shadow:0 10px 34px rgba(11,37,48,0.06);
-    display:flex;gap:20px;align-items:center;
-  }
-  .hero-left{flex:1}
-  .hero h2{margin:0 0 8px;color:var(--accent);font-size:28px}
-  .hero p{margin:0 0 16px;color:var(--muted);line-height:1.45}
-  .hero .actions{display:flex;gap:12px;flex-wrap:wrap}
-  .btn{background:var(--accent);color:#fff;padding:10px 16px;border-radius:10px;text-decoration:none;font-weight:700;display:inline-block}
-  .btn.secondary{background:transparent;color:var(--accent);border:1px solid #e6f2f5}
-  .stat-row{display:flex;gap:12px;margin-top:14px}
-  .stat{background:linear-gradient(180deg,#fbfffe,#f0fbfa);padding:12px;border-radius:10px;min-width:100px;text-align:center;box-shadow:0 6px 18px rgba(11,37,48,0.03)}
-  .stat b{display:block;font-size:18px;color:var(--accent)}
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
 
-  /* Cards */
-  .cards{display:grid;grid-template-columns:repeat(2,1fr);gap:16px;margin-top:18px}
-  @media(max-width:700px){.cards{grid-template-columns:1fr}}
-  .product{
-    background:var(--card);padding:16px;border-radius:12px;border:1px solid #f0f6f7;
-    box-shadow:0 8px 26px rgba(11,37,48,0.04);transition:transform .18s,box-shadow .18s;
-  }
-  .product:hover{transform:translateY(-6px);box-shadow:0 18px 44px rgba(11,37,48,0.08)}
-  .product h3{margin:0 0 8px}
-  .product p{margin:0;color:var(--muted)}
+    nav a:hover {
+      text-decoration: underline;
+    }
 
-  /* Login / aside */
-  .aside{position:relative}
-  .login-card{
-    position:sticky;top:20px;background:var(--card);padding:18px;border-radius:12px;box-shadow:0 12px 30px rgba(11,37,48,0.06);
-    border:1px solid #e9f4f6;
-  }
-  .login-card h4{margin:0 0 10px}
-  .form-row{margin-bottom:10px}
-  label{display:block;font-size:13px;color:var(--muted);margin-bottom:6px}
-  input[type="text"],input[type="password"],input[type="email"],input[type="number"],select{
-    width:100%;padding:10px;border-radius:8px;border:1px solid #e6eef0;background:#fff;font-size:14px;
-  }
-  .small{font-size:13px;color:var(--muted)}
+    .container {
+      max-width: 1100px;
+      margin: 20px auto;
+      padding: 0 15px;
+    }
 
-  /* footer */
-  .site-footer{max-width:var(--maxw);margin:40px auto 80px;padding:18px;text-align:center;color:var(--muted);font-size:14px}
+    .section-box {
+      background: white;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
 
-  /* micro interactions */
-  .fade-in{opacity:0;transform:translateY(6px);animation:enter .44s ease forwards}
-  @keyframes enter{to{opacity:1;transform:none}}
+    .section-box h2 {
+      margin-top: 0;
+      color: #003366;
+    }
 
-  /* success UI */
-  .success{background:rgba(11,138,74,0.08);border-left:4px solid var(--success);padding:10px;border-radius:8px;color:var(--success)}
-</style>
+    footer {
+      background-color: #003366;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 30px;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 10px 20px;
+      background: #0055a5;
+      color: white;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .btn:hover {
+      background: #003366;
+    }
+  </style>
 </head>
 <body>
-  <header class="site-header">
-    <div class="wrap">
-      <div class="brand">
-        <div class="logo">UC</div>
-        <div>
-          <h1>Unity Credit Union</h1>
-          <div style="font-size:13px;color:rgba(255,255,255,0.9)">Community banking • Modern tools</div>
-        </div>
-      </div>
-
-      <nav class="nav" aria-label="Top">
-        <a href="#" class="nav-link">Personal</a>
-        <a href="#" class="nav-link">Loans</a>
-        <a href="#" class="nav-link">Locations</a>
-        <a href="#" class="nav-link">Support</a>
-        <a href="#" class="cta-primary">Member Login</a>
-      </nav>
-    </div>
+  <header>
+    <h1>Unity Credit Union</h1>
+    <p>Your Trusted Partner in Banking</p>
   </header>
 
-  <main id="main" class="wrap">
-    <div class="grid">
-      <section>
-        <div class="hero fade-in" role="region" aria-labelledby="hero-title">
-          <div class="hero-left">
-            <h2 id="hero-title">Bank better, live better</h2>
-            <p>Secure checking and savings, competitive loans, and dedicated local service. Open an account in minutes and manage everything from your phone.</p>
-            <div class="actions">
-              <a class="btn" href="#open">Open Checking</a>
-              <a class="btn secondary" href="#loans">Explore Loans</a>
-            </div>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">Checking</a>
+    <a href="#">Loans</a>
+    <a href="#">Contact</a>
+  </nav>
 
-            <div class="stat-row" aria-hidden="true">
-              <div class="stat"><b>1.2K</b><span class="small">Members</span></div>
-              <div class="stat"><b>$12M</b><span class="small">Assets</span></div>
-              <div class="stat"><b>4.9</b><span class="small">Avg rating</span></div>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="cards">
-          <div class="product fade-in" style="animation-delay:.06s">
-            <h3>Everyday Checking</h3>
-            <p>Fee-free checking with mobile deposits, instant debit card, and overdraft protection options.</p>
-          </div>
-          <div class="product fade-in" style="animation-delay:.12s">
-            <h3>High Yield Savings</h3>
-            <p>Competitive rates and no monthly maintenance fees for members.</p>
-          </div>
-
-          <div class="product fade-in" style="animation-delay:.18s">
-            <h3>Auto & Personal Loans</h3>
-            <p>Flexible terms and fast approvals. Pre-qualify with no impact to credit.</p>
-          </div>
-          <div class="product fade-in" style="animation-delay:.24s">
-            <h3>Business Accounts</h3>
-            <p>Checking and merchant services tailored to local small businesses.</p>
-          </div>
-        </div>
-      </section>
-
-      <aside class="aside">
-        <div class="login-card fade-in" style="animation-delay:.08s">
-          <h4>Member Login</h4>
-          <form id="loginForm" autocomplete="off">
-            <div class="form-row">
-              <label for="u">Username</label>
-              <input id="u" name="username" type="text" required placeholder="username">
-            </div>
-            <div class="form-row">
-              <label for="p">Password</label>
-              <input id="p" name="password" type="password" required placeholder="password">
-            </div>
-            <div style="display:flex;gap:10px;margin-top:8px">
-              <button class="btn" type="submit" style="flex:1">Sign In</button>
-              <button id="fbtn" type="button" class="btn secondary" style="flex:1">Forgot</button>
-            </div>
-            <div id="loginResult" style="margin-top:12px"></div>
-          </form>
-
-          <hr style="margin:12px 0;border:none;border-top:1px solid #f0f6f7">
-
-          <div>
-            <h4 style="margin:0 0 8px">Quick Actions</h4>
-            <label for="zip">ZIP code</label>
-            <input id="zip" placeholder="e.g. 02139" />
-            <div style="margin-top:10px;display:flex;gap:10px">
-              <select id="quickSelect" style="flex:1;padding:10px;border-radius:8px;border:1px solid #e6eef0;">
-                <option>Find branch</option>
-                <option>Open checking</option>
-                <option>Loan calculator</option>
-              </select>
-              <button class="btn" onclick="alert('Simulated action')">Go</button>
-            </div>
-            <div style="margin-top:12px" class="small">Need help? <a href="#" style="color:var(--accent)">Contact support</a></div>
-          </div>
-        </div>
-
-      </aside>
+  <div class="container">
+    <div class="section-box">
+      <h2>Open a Checking Account</h2>
+      <p>Enjoy easy, convenient banking with our modern checking account options tailored for your lifestyle.</p>
+      <a href="#" class="btn">Open Now</a>
     </div>
-  </main>
 
-  <div class="site-footer">© 2025 Unity Credit Union • Demo site. All data here is for design/testing only.</div>
+    <div class="section-box">
+      <h2>Apply for a Loan</h2>
+      <p>Need financial support? Our loan options come with flexible terms and competitive rates.</p>
+      <a href="#" class="btn">Apply Today</a>
+    </div>
 
-<script>
-  // simple client-side demo behavior only (no real auth)
-  document.getElementById('loginForm').addEventListener('submit', function(e){
-    e.preventDefault();
-    const user = document.getElementById('u').value.trim();
-    if(!user){
-      return showLoginMsg('Please enter username','error');
-    }
-    showLoginMsg('Welcome back, ' + escapeHtml(user) + '. This is a simulated login (demo).','success');
-    this.reset();
-  });
+    <div class="section-box">
+      <h2>Personal Banking</h2>
+      <p>From savings to retirement plans, Unity Credit Union is here to guide your financial journey.</p>
+      <a href="#" class="btn">Learn More</a>
+    </div>
+  </div>
 
-  document.getElementById('fbtn').addEventListener('click', function(){ alert('Password reset is demo only.'); });
-
-  function showLoginMsg(msg,type){
-    const el = document.getElementById('loginResult');
-    el.innerHTML = type==='success' ? '<div class="success">'+escapeHtml(msg)+'</div>' : '<div style="color:#c0392b">'+escapeHtml(msg)+'</div>';
-  }
-
-  function escapeHtml(s){ return String(s).replace(/[&<>"']/g,c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
-</script>
+  <footer>
+    <p>&copy; 2025 Unity Credit Union. All Rights Reserved.</p>
+  </footer>
 </body>
 </html>
